--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
         function proceed(val) {
             console.log("function called", val)
             if (val === 1) {
-                document.location = "https://happens02.github.io/CodeGuardian/editor.html";
+                document.location = "https://bhupi02.github.io/CodeGuardian/editor.html";
             }
             else {
-                window.location.href = "https://happens02.github.io/CodeGuardian/chat.html";
+                window.location.href = "https://bhupi02.github.io/CodeGuardian/chat.html";
             }
         }
     </script>
