--- a/editor.html
+++ b/editor.html
@@ -375,7 +375,7 @@
         function continueToChatCOde() {
             var completeChat = { 'user': userCode, 'assistant': previousChat }
             localStorage.setItem("PreviousChat", JSON.stringify(completeChat));
-            window.location.href = "https://kshanu12.github.io/CodeGuardian/chat.html";
+            window.location.href = "https://bhupi02.github.io/CodeGuardian/chat.html";
         }
     </script>
 </body>
